feat: decorating VcApiController.createExchange with @ApiConflictResponse
